fixed Map Editor's bugs and added new features

--- a/RVLMapEditor/CMakeLists.txt
+++ b/RVLMapEditor/CMakeLists.txt
@@ -18,6 +18,9 @@ target_include_directories(rvm PRIVATE ../RVL/src/RVL/API/ECS)
 target_include_directories(rvm PRIVATE ../RVL/vendor/)
 target_include_directories(rvm PRIVATE ../RVL/vendor/include/)
 target_include_directories(rvm PRIVATE ../RVL/vendor/include/glm)
+target_include_directories(rvm PRIVATE ../RVL/vendor/assimp/include/)
+target_include_directories(rvm PRIVATE ../RVL/vendor/yaml/include/)
+target_include_directories(rvm PRIVATE ../RVL/vendor/imgui/)
 target_include_directories(rvm PRIVATE ../RVL/src)
 target_include_directories(rvm PRIVATE ../RVL/)
 
