--- a/RVLMapEditor/imgui.ini
+++ b/RVLMapEditor/imgui.ini
@@ -7,7 +7,7 @@ Collapsed=1
 Pos=291,19
 Size=417,468
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000B,0
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -27,7 +27,7 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Project]
-Pos=408,160
+Pos=196,130
 Size=272,391
 Collapsed=0
 
@@ -37,10 +37,10 @@ Size=557,320
 Collapsed=0
 
 [Window][Tile Pallete]
-Pos=0,20
-Size=266,774
+Pos=0,21
+Size=360,773
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000009,0
 
 [Window][Tools]
 Pos=1155,19
@@ -49,10 +49,10 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Map View]
-Pos=268,20
-Size=851,774
+Pos=362,21
+Size=757,773
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000B,0
 
 [Window][Add Tile]
 Pos=212,360
@@ -60,8 +60,8 @@ Size=260,323
 Collapsed=0
 
 [Window][Properties]
-Pos=1121,20
-Size=319,463
+Pos=1121,21
+Size=319,387
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -76,8 +76,8 @@ Size=245,139
 Collapsed=0
 
 [Window][Projects]
-Pos=76,188
-Size=383,314
+Pos=-23,141
+Size=383,227
 Collapsed=0
 
 [Window][Delete Project]
@@ -97,25 +97,25 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Log Console]
-Pos=1121,485
-Size=319,309
+Pos=1121,410
+Size=319,384
 Collapsed=0
 DockId=0x0000000E,0
 
 [Docking][Data]
-DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,65 Size=1440,774 Split=X Selected=0xE192E354
-  DockNode            ID=0x00000009 Parent=0x3BC79352 SizeRef=1119,774 Split=X
-    DockNode          ID=0x00000007 Parent=0x00000009 SizeRef=834,775 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000007 SizeRef=369,681 Selected=0x44A6A033
-      DockNode        ID=0x00000002 Parent=0x00000007 SizeRef=1069,681 Split=Y Selected=0x06D5B7B7
-        DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=905,557 Split=Y Selected=0x06D5B7B7
-          DockNode    ID=0x0000000B Parent=0x00000003 SizeRef=744,388 Split=X Selected=0x06D5B7B7
-            DockNode  ID=0x00000005 Parent=0x0000000B SizeRef=266,463 Selected=0xA2BF4849
-            DockNode  ID=0x00000006 Parent=0x0000000B SizeRef=851,463 CentralNode=1 Selected=0x06D5B7B7
-          DockNode    ID=0x0000000C Parent=0x00000003 SizeRef=744,385 Selected=0xDE6E0C33
-        DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=905,216 Selected=0x49278EEE
-    DockNode          ID=0x00000008 Parent=0x00000009 SizeRef=285,775 Selected=0xD44407B5
-  DockNode            ID=0x0000000A Parent=0x3BC79352 SizeRef=319,774 Split=Y Selected=0x199AB496
-    DockNode          ID=0x0000000D Parent=0x0000000A SizeRef=319,463 Selected=0x199AB496
-    DockNode          ID=0x0000000E Parent=0x0000000A SizeRef=319,309 Selected=0xCB85D25D
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,66 Size=1440,773 Split=X Selected=0xE192E354
+  DockNode            ID=0x00000009 Parent=0x3BC79352 SizeRef=360,773 Selected=0xA2BF4849
+  DockNode            ID=0x0000000A Parent=0x3BC79352 SizeRef=1078,773 Split=X
+    DockNode          ID=0x00000005 Parent=0x0000000A SizeRef=757,679 Split=X
+      DockNode        ID=0x00000007 Parent=0x00000005 SizeRef=834,775 Split=X
+        DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=369,681 Selected=0x44A6A033
+        DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1069,681 Split=Y Selected=0x06D5B7B7
+          DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=905,557 Split=Y Selected=0x06D5B7B7
+            DockNode  ID=0x0000000B Parent=0x00000003 SizeRef=744,388 CentralNode=1 Selected=0x06D5B7B7
+            DockNode  ID=0x0000000C Parent=0x00000003 SizeRef=744,385 Selected=0xDE6E0C33
+          DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=905,216 Selected=0x49278EEE
+      DockNode        ID=0x00000008 Parent=0x00000005 SizeRef=285,775 Selected=0xD44407B5
+    DockNode          ID=0x00000006 Parent=0x0000000A SizeRef=319,679 Split=Y Selected=0x199AB496
+      DockNode        ID=0x0000000D Parent=0x00000006 SizeRef=319,387 Selected=0x199AB496
+      DockNode        ID=0x0000000E Parent=0x00000006 SizeRef=319,384 Selected=0xCB85D25D
 
