--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -17,6 +17,7 @@ target_include_directories(sandbox PRIVATE ../RVL/src/RVL/API/ECS)
 target_include_directories(sandbox PRIVATE ../RVL/vendor/)
 target_include_directories(sandbox PRIVATE ../RVL/vendor/include/)
 target_include_directories(sandbox PRIVATE ../RVL/vendor/assimp/include/)
+target_include_directories(sandbox PRIVATE ../RVL/vendor/yaml/include/)
 target_include_directories(sandbox PRIVATE ../RVL/vendor/include/glm)
 target_include_directories(sandbox PRIVATE ../RVL/vendor/imgui/)
 target_include_directories(sandbox PRIVATE ../RVL/src)
@@ -24,6 +25,6 @@ target_include_directories(sandbox PRIVATE ../RVL/)
 
 include(GNUInstallDirs)
 
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo -framework CoreFoundation -Wno-unused -Wno-deprecated")
+set(CMAKE_CXX_FLAGS "-Wall -framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo -framework CoreFoundation -Wno-unused -Wno-deprecated")
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O4")
