--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -26,9 +26,8 @@ Size=237,313
 Collapsed=0
 
 [Window][Properties]
-ViewportPos=1058,126
-ViewportId=0xC89E3217
-Size=269,894
+Pos=165,107
+Size=336,561
 Collapsed=0
 
 [Window][DockSpace Demo]
