--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -6,22 +6,28 @@ add_executable(sandbox src/Main.cpp src/MainState.cpp)
 
 set_property(TARGET sandbox PROPERTY CXX_STANDARD 20)
 
-target_link_libraries(sandbox ${CMAKE_CURRENT_SOURCE_DIR}/vendor/libRVL.a ${CMAKE_CURRENT_SOURCE_DIR}/../RVL/vendor/assimp/bin/libassimp.5.2.5.dylib ${CMAKE_CURRENT_SOURCE_DIR}/../RVL/vendor/lib/libglfw3.a)
+target_link_libraries(sandbox 
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/libRVL.a 
+    ${CMAKE_CURRENT_SOURCE_DIR}/../RVL/vendor/assimp/bin/libassimp.5.2.5.dylib
+    ${CMAKE_CURRENT_SOURCE_DIR}/../RVL/vendor/lib/libglfw3.a
+)
 
 set(CMAKE_BUILD_TYPE Release)
 
-target_include_directories(sandbox PRIVATE .)
-target_include_directories(sandbox PRIVATE ../RVL/src/RVL)
-target_include_directories(sandbox PRIVATE ../RVL/src/RVL/API/)
-target_include_directories(sandbox PRIVATE ../RVL/src/RVL/API/ECS)
-target_include_directories(sandbox PRIVATE ../RVL/vendor/)
-target_include_directories(sandbox PRIVATE ../RVL/vendor/include/)
-target_include_directories(sandbox PRIVATE ../RVL/vendor/assimp/include/)
-target_include_directories(sandbox PRIVATE ../RVL/vendor/yaml/include/)
-target_include_directories(sandbox PRIVATE ../RVL/vendor/include/glm)
-target_include_directories(sandbox PRIVATE ../RVL/vendor/imgui/)
-target_include_directories(sandbox PRIVATE ../RVL/src)
-target_include_directories(sandbox PRIVATE ../RVL/)
+target_include_directories(sandbox PRIVATE 
+    .
+    ../RVL/src/RVL
+    ../RVL/src/RVL/API/
+    ../RVL/src/RVL/API/ECS
+    ../RVL/vendor/
+    ../RVL/vendor/include/
+    ../RVL/vendor/assimp/include/
+    ../RVL/vendor/yaml/include/
+    ../RVL/vendor/include/glm
+    ../RVL/vendor/imgui/
+    ../RVL/src
+    ../RVL/
+)
 
 include(GNUInstallDirs)
 
